NXP-29190: Add Nuxeo Profiles notion